mdapipkg/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Able_to_Delete_Activities__c</fullName>
        <formula>$User.Able_to_Delete_Activities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Able to Delete Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;R Chapter Visit</fullName>
                </value>
                <value>
                    <fullName>Champion Interests</fullName>
                </value>
                <value>
                    <fullName>CONV</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>DEM</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Govern</fullName>
                </value>
                <value>
                    <fullName>IOS</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>MemOut</fullName>
                </value>
                <value>
                    <fullName>NM Voucher</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Recognition</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Project__c</fullName>
        <label>Department Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Member Renewal</fullName>
                </value>
                <value>
                    <fullName>Member Resignation</fullName>
                </value>
                <value>
                    <fullName>Member Transfer/Transition</fullName>
                </value>
                <value>
                    <fullName>Membership Information Request</fullName>
                </value>
                <value>
                    <fullName>Membership Issue</fullName>
                </value>
                <value>
                    <fullName>New Member Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <inlineHelpText>This can be used to signify if &apos;outgoing&apos; or &apos;incoming&apos;</inlineHelpText>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FingerTip__Activity_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Activity Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FingerTip__Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FingerTip__Assigned_To_Name__c</fullName>
        <formula>Owner:User.FirstName +&quot; &quot;+  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FingerTip__Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FingerTip__DecisionId__c</fullName>
        <label>DecisionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FingerTip__End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FingerTip__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FingerTip__Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FingerTip__Last_Modified_Date_Custom__c</fullName>
        <formula>DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Custom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FingerTip__Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Given</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Minor Challenges</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed with Problems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FingerTip__Skill_Level__c</fullName>
        <label>Skill Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FingerTip__Stage_Formula__c</fullName>
        <formula>IF( ISPICKVAL( Status , &apos;Not Started&apos;) , &apos;Ready&apos;,  IF( OR(ISPICKVAL( Status , &apos;In Progress&apos;),ISPICKVAL( Status , &apos;Waiting on someone else&apos;),ISPICKVAL( Status , &apos;Deferred&apos;)) , &apos;Started&apos;,  IF(  IsClosed  , &apos;Finished&apos;, &apos;&apos;) ) )</formula>
        <label>Stage (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FingerTip__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FingerTip__Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FingerTip__Task_Closed_Date__c</fullName>
        <label>Task Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KGRenewal__IsGeneratedByEncore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field flags Activities that were generated by Encore.</description>
        <label>Is Generated By Encore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Agent__c</fullName>
        <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Date_Time__c</fullName>
        <defaultValue>NOW() - 55/1440</defaultValue>
        <description>used to trigger the process builder update for NVM calls</description>
        <label>NVM Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Ages2Stages</fullName>
                </value>
                <value>
                    <fullName>Alliances (Learning Institutes)</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Awards / Recognition</fullName>
                </value>
                <value>
                    <fullName>Bootcamp / PLE</fullName>
                </value>
                <value>
                    <fullName>Budget / Funding</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Calendar / Chapter Events</fullName>
                </value>
                <value>
                    <fullName>Champion Journey</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Chapter Board Meeting</fullName>
                </value>
                <value>
                    <fullName>Chapter Event</fullName>
                </value>
                <value>
                    <fullName>Chapter Exco Meeting</fullName>
                </value>
                <value>
                    <fullName>Chapter Pursue</fullName>
                </value>
                <value>
                    <fullName>Chapter Review</fullName>
                </value>
                <value>
                    <fullName>CLW</fullName>
                </value>
                <value>
                    <fullName>Committee Work</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contact Info</fullName>
                </value>
                <value>
                    <fullName>Day Chair</fullName>
                </value>
                <value>
                    <fullName>Declined Chapter</fullName>
                </value>
                <value>
                    <fullName>Digital Learning / On-Demand</fullName>
                </value>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>Dues</fullName>
                </value>
                <value>
                    <fullName>Dues/Payment</fullName>
                </value>
                <value>
                    <fullName>EDGE</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>FingerTip__AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>new member call</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>exclusive</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>